--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -6,7 +6,7 @@
 <div class="settingsBar">
     <span>
         <%= localeLabelText %>
-        <select id="localeChangeSelect" class="select" onchange="javascript:changeLocale();">
+        <select id="localeChangeSelect" class="select" onchange="javascript:lord.changeLocale();">
             <% foreach locale in locales %>
                 <% item %>
                     <% if ( locale.name == content.currentLocale.name ) %>
@@ -22,7 +22,7 @@
     </span>
     <span>
         <%= styleLabelText %>
-        <select id="styleChangeSelect" class="select" onchange="javascript:changeStyle();">
+        <select id="styleChangeSelect" class="select" onchange="javascript:lord.changeStyle();">
             <% foreach st in styles %>
                 <% item %>
                     <% if ( st.name == content.style.name ) %>
@@ -38,7 +38,7 @@
     </span>
     <span>
         <%= timeLabelText %>
-        <select id="timeChangeSelect" class="select" onchange="javascript:changeTime();">
+        <select id="timeChangeSelect" class="select" onchange="javascript:lord.changeTime();">
             <% if ( content.currentTime == "local" ) %>
                 <option value="server"><%= timeServerText %></option>
                 <option value="local" selected="true"><%= timeLocalText %></option>
@@ -53,13 +53,13 @@
         <% if ( content.loggedIn ) %>
             <button class="button" onclick="javascript:lord.doLogout();"><%= loginButtonText %></button>
             <input id="showTripcodeCheckbox" type="checkbox" class="checkbox" title="<%= showTripcodeText %>"
-                   onclick="javascript:switchShowTripcode();" name="showTripcode" />
+                   onclick="javascript:lord.switchShowTripcode();" name="showTripcode" />
         <% else %>
             <input id="loginInput" type="password" class="input" name="hashpass"
                    placeholder="<%= loginPlaceholderText %>" />
-            <input id="showLoginCheckbox" type="checkbox" class="checkbox" onclick="javascript:switchShowLogin();"
+            <input id="showLoginCheckbox" type="checkbox" class="checkbox" onclick="javascript:lord.switchShowLogin();"
                    name="showLogin" title="<%= showPasswordText %>" />
-            <button class="button" onclick="javascript:doLogin();"><%= loginButtonText %></button>
+            <button class="button" onclick="javascript:lord.doLogin();"><%= loginButtonText %></button>
         <% end %>
         <% if ( !content.loginMessageWarning.empty() ) %>
             <span class="loginMessageWarning"><%= loginMessageWarning %></span>
@@ -90,7 +90,7 @@
         <input type="hidden" id="showSearchFormText" value="<%= showSearchFormText %>" />
         <div>
             [<a id="showHideSearchFormButton<%= position %>"
-                href="javascript:showHideSearchForm('<%= position %>');">
+                href="javascript:lord.showHideSearchForm('<%= position %>');">
                 <%= showSearchFormText %>
             </a>]
         </div>
@@ -125,6 +125,7 @@
 <title><%= pageTitle %></title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <link id="favicon" rel="shortcut icon" href="/<%= sitePathPrefix %>favicon.ico">
+<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
 <% if ( javascript ) %>
     <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/picoModal-2.1.0.min.js"></script>
     <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/sha1.js"></script>
