--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -5,17 +5,17 @@
 <% template threadActions(std::string position) %>
 <div class="threadActions">
     [<a href="/<%= sitePathPrefix %><%= currentBoard.name %>"><%= backText %></a>]
-    [<a href="javascript:updateThread('<%= currentBoard.name %>', <%= number %>);"><%= updateThreadText %></a>]
+    [<a href="javascript:lord.updateThread('<%= currentBoard.name %>', <%= number %>);"><%= updateThreadText %></a>]
     <% if ( "top" == position ) %>
         [<a href="#bottom"><%= toBottomText %></a>]
     <% else %>
         [<a href="#top"><%= toTopText %></a>]
     <% end %>
     <% if ( content.autoUpdateEnabled ) %>
-        [<input onclick="setAutoUpdateEnabled(this);" id="autoUpdate_<%= position %>"
+        [<input onclick="lord.setAutoUpdateEnabled(this);" id="autoUpdate_<%= position %>"
             type="checkbox" checked="true"><%= autoUpdateText %></input>]
     <% else %>
-        [<input onclick="setAutoUpdateEnabled(this);" id="autoUpdate_<%= position %>"
+        [<input onclick="lord.setAutoUpdateEnabled(this);" id="autoUpdate_<%= position %>"
             type="checkbox"><%= autoUpdateText %></input>]
     <% end %>
 </div>
@@ -24,7 +24,6 @@
 <% template head() %>
 <% include baseHead(1) %>
 <% include boardHead() %>
-<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/FileSaver.min.js"></script>
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/jszip.min.js"></script>
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/jszip-utils.min.js"></script>
@@ -39,7 +38,7 @@
 <input id="noNewPostsText" type="hidden" value="<%= noNewPostsText %>" />
 <input id="newPostsText" type="hidden" value="<%= newPostsText %>" />
 <input id="currentThreadNumber" type="hidden" value="<%= opPost.number %>" />
-<iframe id="kostyleeque" name="kostyleeque" style="display: none;" onload="posted();"></iframe>
+<iframe id="kostyleeque" name="kostyleeque" style="display: none;" onload="lord.postedInThread();"></iframe>
 <a id="top"></a>
 <% include settings() %>
 <br />
@@ -107,7 +106,7 @@
     <head>
         <% include head() %>
     </head>
-    <body onload="javascript:initializeOnLoadSettings(); initializeOnLoadThread();">
+    <body onload="javascript:lord.initializeOnLoadThread();">
         <% include body() %>
     </body>
 </html>
