--- a/src/lib/template/not_found.tmpl
+++ b/src/lib/template/not_found.tmpl
@@ -7,9 +7,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <% include baseHead(1) %>
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
     </head>
-    <body onload="javascript:initializeOnLoadSettings();">
+    <body onload="javascript:lord.initializeOnLoadSettings();">
         <% include baseTexts() %>
         <% include settings() %>
         <br />
