--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -60,7 +60,7 @@
             <br />
             [spoiler][i][b]<span class="spoiler"><i><b><%= combinedText %></b></i></span>[/b][/i][/spoiler]
             <br /><br />
-            <font color="green">&gt;<%= quotation %></font>
+            <span class="quotation">&gt;<%= quotation %></span>
             <br /><br />
             <a href="javascript:void(0);">&gt;&gt;1675284</a> <%= postLinkDescription %>
             <br /><br />
