--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -181,7 +181,7 @@
     <div class="postFileSize">
         (<%= file.size %>)
     </div>
-    <% if ( "image" == file.type ) %>
+    <% if ( "image/png" == file.type || "image/jpeg" == file.type || "image/gif" == file.type ) %>
         <div class="postFileSearch">
             <a href="//www.google.com/searchbyimage?image_url=<%= siteProtocol %>://<%= siteDomain %>/<%= sitePathPrefix %><%= currentBoard.name %>/<%= file.sourceName %>"
                title="<%= findSourceWithGoogleText %>" target="_blank">
@@ -400,7 +400,7 @@
                         <% else %>
                             <blockquote id="post<%= post.number %>Text"><%= post.text | raw %></blockquote>
                         <% end %>
-                        
+
                     </td>
                 <% else %>
                     <td class="shrink"></td>
