--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -368,6 +368,10 @@ span.spoiler:hover a {
     color: red;
 }
 
+.modificationDateTime {
+    font-style: italic;
+}
+
 .tripcode {
     color: green;
 }
