--- a/src/lib/template/pr_board.tmpl
+++ b/src/lib/template/pr_board.tmpl
@@ -5,9 +5,24 @@
 <% template captchaField(std::string position) %>
 <% if ( "Top" == position ) %>
     <div id="googleCaptcha" class="codechaContainer">
-        <script type="text/javascript" src="//codecha.org/api/challenge?k=<%= codechaPublicKey %>"> </script>
+        <script type="text/javascript" src="//codecha.org/api/challenge?k=<%= codechaPublicKey %>"></script>
     </div>
 <% end %>
+<% end template %>
+
+<% template boardHead() %>
+<%include board::boardHead() %>
+<script type="text/javascript">
+    /*ololord global object*/
+
+    var lord = lord || {};
+
+    /*Functions*/
+    
+    lord.reloadCaptchaFunction = function() {
+        lord.reloadPage();
+    };
+</script>
 <% end template %>
 
 <% end view %>
