--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -255,5 +255,9 @@
         <file>static/img/iqdb.png</file>
         <file>static/img/download.png</file>
         <file>static/img/favicon_newmessage.ico</file>
+        <file>static/img/mp4_file.png</file>
+        <file>static/img/mp4_logo.png</file>
+        <file>static/img/ogg_file.png</file>
+        <file>static/img/ogg_logo.png</file>
     </qresource>
 </RCC>
